changed the mappings from yarn to mojmap, hate this lol I never wanna see mods again XDD, changed all classes to match the new mojmap mappings